# game_of_life

./: Cargo.toml
crates/life/: Cargo.toml
crates/life/src/: main.rs  main_.rs
